# lilygo-thmi-lvgl-esp-idf-project

./: .gitignore  CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.defaults  version
backup/.vscode-mac/: settings.json
backup/.vscode-win/: settings.json
backup/main/: CMakeLists.txt  app_main.cpp
backup/sdkconfig/: sdkconfig  sdkconfig.old
help/: Git_HELP.md
lib/ESP32_Command_Line_Interface/: .clang-format  .clangd  CMakeLists.txt
lib/ESP32_Command_Line_Interface/include/: command_line_interface.h  config.h  init.h
lib/ESP32_Command_Line_Interface/modules/info/: funct.c  info.c
lib/ESP32_Command_Line_Interface/modules/nvs_cmd/: nvs_cmd.c
lib/ESP32_Command_Line_Interface/modules/restart/: restart.c
lib/ESP32_Command_Line_Interface/modules/set_cmd/: set_cmd.c  set_log.c
lib/ESP32_Command_Line_Interface/modules/tasks_nfo/: tasks_nfo.c
lib/ESP32_Command_Line_Interface/modules/uptime/: uptime.c
lib/ESP32_Command_Line_Interface/modules/wifi_cmd/: wifi_join_cmd.c
lib/ESP32_Command_Line_Interface/src/: command_line_interface.c
main/: CMakeLists.txt  app_main.cpp
